# plmmr-ros-project

./: .gitignore  README.md
first_project/: README.md
first_project/src/distance_service/src/: distance.cpp
first_project/src/orchestrator/: package.xml
first_project/src/orchestrator/launch/: orchestrator.launch
first_project/src/raw_data_handler/: CMakeLists.txt  package.xml
second_project/: README.md
second_project/src/robot_mapping/: CMakeLists.txt  mapping_optitrack.launch  mapping_visual+imu.launch  mapping_visual.launch  navigation.launch  navigation_visual+imu.launch  navigation_visual.launch  odometry_mapping.launch  optitrack_mapping.launch  package.xml
second_project/src/robot_mapping/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
second_project/src/robot_mapping/launch/: mapping_visual.launch  navigation_visual+imu.launch
second_project/src/robot_mapping/maps/: map_optitrack.pgm  map_optitrack.yaml  map_visual+imu.pgm  map_visual+imu.yaml  map_visual.pgm  map_visual.yaml
second_project/src/robot_mapping/node/: amcl.xml  gmapping.xml  laserscan.xml  move_base.xml  sensor_tf.xml  sensors_fusion.xml
second_project/src/robot_mapping/rviz/: mapping_optitrack.rviz  mapping_visual+imu.rviz  mapping_visual.rviz  navigation.rviz  navigation_visual+imu.rviz  navigation_visual.rviz  odometric.rviz  optitrack.rviz
src/distance_service/: CMakeLists.txt  package.xml
src/distance_service/src/: distance.cpp
src/distance_service/srv/: DistanceService.srv
src/gps_converter/: CMakeLists.txt  package.xml
src/gps_converter/launch/: converter.launch
src/gps_converter/src/: converter.cpp
src/orchestrator/: CMakeLists.txt
src/orchestrator/launch/: orchestrator.launch
src/raw_data_handler/: CMakeLists.txt
src/raw_data_handler/src/: raw_data_handler.cpp
src/status_check/: CMakeLists.txt  package.xml
src/status_check/cfg/: parameters.cfg
src/status_check/msg/: Status.msg
src/status_check/src/: status_check.cpp
